add travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ script:
 deploy:
   provider: pages
   skip-cleanup: true
-  github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
+  github-token: $GITHUB_TOKEN
   keep-history: true
+  local-dir: ./example/dist
   on:
     branch: master
