--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "email": "wermetal@gmail.com"
   },
   "repository": "https://github.com/wermetal/react-page-slides.git",
+  "homepage": "https://wermetal.github.io/react-page-slides",
+  "files": [
+    "/src",
+    "/dist"
+  ],
   "private": true,
   "keywords": [
     "fullpage",
